--- a/assets/scss/pages/_landscape-bodies.scss
+++ b/assets/scss/pages/_landscape-bodies.scss
@@ -24,5 +24,5 @@
 }
 
 .lb-hero .container .row {
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
